name:                lenz-monad-classes
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             OtherLicense
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
-- copyright:           
category:            Lenses
build-type:          Simple
cabal-version:       >=1.9.2
tested-with:         GHC ==7.10.*,
                     GHC ==7.12.*,
                     GHC ==8.0.*

library
  exposed-modules:     Control.Lens.Monadic.Classes
  extensions:          RankNTypes, ImpredicativeTypes, FlexibleContexts
  -- other-modules:       
  build-depends:       base >=4.8 && <5, base-unicode-symbols >=0.2 && <0.3, monad-classes >=0.3 && <0.4, transformers >=0.4 && <0.6, lenz >=0.2 && <0.3
